[package]
name = "suscomp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
nix = "0.26.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
vulkano = { git = "https://github.com/vulkano-rs/vulkano/"}
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano/"}

[dependencies.smithay]
git = "https://github.com/smithay/smithay"
default-features = false
features = [
	"wayland_frontend",
	"backend_session",
	"backend_session_libseat",
	"backend_libinput"
]
